# nanolang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
attostd/: gui.atto  imgui.atto
cmake/: AttoDeps.cmake
docs/: 2026-04-06.md  architecture.md  attolang.md  changelog.md  coding.md  differential.md  instructions.md  names.md  nanolang.md  patterns.md  style.md  thinking.md
docs/podcasts/: introducing-orgasm.md
docs/podcasts/notes/: introducing-orgasm.md
nanostd/: imgui.nano
scenes/klavier/: main.atto  main.nano
scenes/multifader/: main.atto
src/atto/: args.cpp  args.h  expr.cpp  expr.h  graph_builder.cpp  graph_builder.h  graph_editor_interfaces.h  graph_index.cpp  graph_index.h  graphbuilder.cpp  graphbuilder.h  inference.cpp  inference.h  model.h  node_types.h  node_types2.h  serial.cpp  serial.h  shadow.cpp  shadow.h  symbol_table.cpp  symbol_table.h  type_utils.cpp  type_utils.h
src/attoc/: codegen.cpp  codegen.h  main.cpp
src/attoflow/: atto_editor_shared_state.h  editor.cpp  editor.h  editor1.cpp  editor2.cpp  editor2.h  editor_pane.h  editor_style.cpp  editor_style.h  main.cpp  nets_editor.cpp  nets_editor.h  node_renderer.cpp  node_renderer.h  sdl_imgui_window.h  tab.h  tooltip_renderer.cpp  tooltip_renderer.h  visual_editor.cpp  visual_editor.h  window.cpp  window.h
src/attoruntime/: atto_gui.cpp  attoruntime.h  main.cpp  nano_imgui.cpp
src/legacy/: editor1.h
src/nano/: args.cpp  expr.cpp  expr.h  graph_index.cpp  inference.cpp  inference.h  model.h  node_types.h  serial.cpp  shadow.cpp  shadow.h  symbol_table.cpp  type_utils.cpp  type_utils.h  types.cpp  types.h
src/nanoc/: codegen.cpp  codegen.h
src/nanoflow/: editor.cpp  editor.h
src/nanoruntime/: nano_imgui.cpp
tests/: test_inference.cpp
